2017-04-13  Charlie Zender  <zender@uci.edu>

	* Exit with clear message instead of core dump on missing files on HPSS systems with hsi command

	* Replace ncremap input file front-end with code from ncclimo

	* Clarify effects of compression on expected memory use in documentation

2017-04-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.6-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.6-alpha04 final changes';git push
	git tag -a 4.6.6-alpha04 -m 'Version 4.6.6-alpha04 new features: ncap2 cell_methods fix; 2-D UGRID; lst_rnk_ge2 time_bnds; nfr msk fix; neareststod';git push --tags

	* Quiet CONVENTIONS attribute printing

	* Verified that ncremap mask changes produce expected results with neareststod
	neareststod/dtos uses nearest value, regardless of whether that value is valid
	Accurate interpolation of ocean values across continents requires custom algorithm

	* Noted that is_crd_var member of trv structures has been defined incorrectly since birth
	Member should have been named is_rec_crd for accuracy and consistency with older NCO

	* ncremap nco_grd_nfr() tolerates files with mask and without area variables

	* Hardwire exclusion of area, lat_bnds, lon_bnds into lst_rnk_ge2 so splitter works on NCO-regridded files

2017-04-10  Charlie Zender  <zender@uci.edu>

	* ncremap nco_grd_nfr() always writes mask data when input file has mask variable
	Until today, nco_grd_nfr() would always define mask variable but only write data when input file had mask

	* ncremap now invokes neareststod when requested, not nearestdtos (doh!)

2017-04-10 Henry Butowsky  <henryb@hush.com>

	* Refactor nco_msa_rcr_clc() to use less memory and run faster for --msa_usr_rdr

2017-04-09  Charlie Zender  <zender@uci.edu>

	* Add Cell_[Along/Across]_Swath_mod04 to dimension database for	ncl_convert2nc compatibility

	* Hardwire exclusion of time_bnds into lst_rnk_ge2

	* Complete minimal UGRID metadata

	* Fix mask type conversion in nco_grd_nfr()
