@@ -1,5 +1,9 @@
 2017-04-13  Charlie Zender  <zender@uci.edu>
 
+	* NCO 4.6.6-alpha05 release procedure:
+	cd ~/nco;git commit -a -m 'Version 4.6.6-alpha05 final changes';git push
+	git tag -a 4.6.6-alpha05 -m 'Version 4.6.6-alpha05 new features: ncremap front-end from ncclimo; --cal finds climatology, bounds variables; mmr documentation';git push --tags
+
 	* Exit with clear message instead of core dump on missing files on HPSS systems with hsi command
 
 	* Replace ncremap input file front-end with code from ncclimo
